feat(SimulationEngine): created runAsyncInThreadPool